2001-02-28  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/2064
	* configure.target: Change irix* to irix6.5* in target_os table.

2001-02-28  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/2103
	* include/bits/c++config (__GLIBCPP__): Bump number in
	anticipation of 2.92.

	* include/bits/codecvt.h: Fix typo.
	* include/bits/basic_file.h (__basic_file): Don't use _M_wfile for
	stdio model.
	* acinclude.m4 (GLIBCPP_ENABLE_CSTDIO): Enable wchar_t
	instantiations for stdio model.

2001-02-28  Phil Edwards  <pme@sources.redhat.com>

	* acinclude.m4 (GLIBCPP_CONFIGURE):  Remove GLIBCPP_CFLAGS
	  and GLIBCPP_CXXFLAGS as unused variables.
	* configure.host:  Likewise.
	* configure.target:  Likewise.
	* aclocal.m4:  Regenerated.
	* configure:  Regenerated.
	* Makefile.in:  Regenerated.
	* libio/Makefile.in:  Regenerated.
	* libmath/Makefile.in:  Regenerated.
	* libsupc++/Makefile.in:  Regenerated.
	* src/Makefile.in:  Regenerated.

2001-02-27  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/1886
	* include/bits/basic_file.h: Include basic_file_model.h.
	* config/c_io_libio.cc: Move to...
	* config/basic_file_libio.cc: Here.
	* config/basic_file_libio.h: New file.
	* config/c_io_stdio.cc: Move to...
	* config/basic_file_stdio.cc: Here.
	* config/basic_file_stdio.h: New file.
	* config/c_io_libio.h: Tweak.
	* config/c_io_stdio.h: Tweak.
	* src/Makefile.am (build_headers): Add basic_file_model.h.
	(sources): Add basic_file.cc, remove c++io.cc.
	* src/Makefile.in: Regenerate.
	* acinclude.m4 (GLIBCPP_ENABLE_CSTDIO): Add support for
	basic_file_model.h and basic_file.cc.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* testsuite/27_io/filebuf.cc (test05): Add regression.
	
2001-02-27  Benjamin Kosnik  <bkoz@redhat.com>

	Correct license.
	* config/cpu/alpha/bits/atomicity.h: Change.
	* config/cpu/arm/bits/atomicity.h
	* config/cpu/generic/bits/atomicity.h
	* config/cpu/i386/bits/atomicity.h
	* config/cpu/i486/bits/atomicity.h
	* config/cpu/ia64/bits/atomicity.h