@@ -9,7 +9,7 @@
   ** Locations of "the most recent snapshot is the Nth" text are 
   ** answers 1_1, 1_4, 4_1, 5_6.
 -->
-<!-- $Id: index.html,v 1.2 2001/01/23 17:02:27 pme Exp $ -->
+<!-- $Id: index.html,v 1.3 2001/02/15 22:21:12 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -671,10 +671,10 @@ HREF="http://gcc.gnu.org/ml/libstdc++/1999/msg00084.html">speculation</A>.
       <P>This is assuming that your idea of &quot;multithreaded&quot;
          is the same as ours...  The general question of multithreading
          and libstdc++-v3 is addressed in the chapter-specific advice for
-<A HREF="http://gcc.gnu.org/libstdc++/17_intro/howto.html#3">Library
+<A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/howto.html#3">Library
          Introduction</A>.  Threadsafe containers are covered in
          more detail in
-<A HREF="http://gcc.gnu.org/libstdc++/23_containers/howto.html">the
+<A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/23_containers/howto.html">the
          Received Wisdom section on containers</A>.
          <!-- I have successfully evaded the topic; my work here is
               done- no, wait, I have to write those other sections... -->
@@ -706,7 +706,7 @@ HREF="http://gcc.gnu.org/ml/libstdc++/1999/msg00084.html">speculation</A>.
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@gcc.gnu.org">Gabriel Dos Reis</A>.
-<BR> $Id: index.html,v 1.2 2001/01/23 17:02:27 pme Exp $
+<BR> $Id: index.html,v 1.3 2001/02/15 22:21:12 pme Exp $
 </EM></P>
 
 
