@@ -561,7 +561,7 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
 
    Comments and suggestions are welcome, and may be sent to [81]Phil
    Edwards or [82]Gabriel Dos Reis.
-   $Id: index.html,v 1.2 2001/01/23 17:02:27 pme Exp $ 
+   $Id: index.html,v 1.3 2001/02/15 22:21:12 pme Exp $ 
 
 References
 
@@ -640,8 +640,8 @@ References
   73. http://www.sgi.com/Technology/STL/
   74. ../ext/howto.html
   75. http://gcc.gnu.org/ml/libstdc++/1999-q3/msg00066.html
-  76. http://gcc.gnu.org/libstdc++/17_intro/howto.html#3
-  77. http://gcc.gnu.org/libstdc++/23_containers/howto.html
+  76. http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/howto.html#3
+  77. http://gcc.gnu.org/onlinedocs/libstdc++/23_containers/howto.html
   78. http://www.ansi.org/
   79. http://webstore.ansi.org/ansidocstore/product.asp?sku=ISO%2FIEC+14882%2D1998
   80. http://www.iso.ch/
