@@ -1,3 +1,8 @@
+2001-03-01  Phil Edwards  <pme@sources.redhat.com>
+
+	* docs/html/faq/index.html:  Update broken links.
+	* docs/html/faq/index.txt:  Regenerated.
+
 2001-02-28  Benjamin Kosnik  <bkoz@redhat.com>
 
 	libstdc++/2064
